# Gaussian-Wave-Packet-Tunneling

./: README.md  main.py  pyproject.toml
quantum_tunneling/: derivatives.py  scattering_sim.py  utils.py
scripts/: plots.py
tests/: test_derivatives.py  test_init.py
