[project]
name = "gaussian-wave-packet-tunneling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffrax>=0.7.0",
    "equinox>=0.13.6",
    "jax>=0.6.2",
    "plotly>=6.6.0",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[dependency-groups]
dev = [
    "ipython>=8.38.0",
    "pytest>=9.0.2",
]
